<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:fontFamily="sans-serif-condensed"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-condensed"


        android:textAllCaps="true"
       android:text="@string/what_is_the_name_of_your_internet_service_provider"
       <CheckBox android:id="@+id/checkbox_safaricom"
         android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/safaricom"
           app:fontFamily="sans-serif-condensed"
           android:layout_margin="10sp"

           android:textAllCaps="true">

       </CheckBox>
    <CheckBox android:id="@+id/checkbox_faiba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faiba"
        app:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:onClick="onCheckboxClicked"
        android:layout_margin="10sp"
        tools:ignore="DuplicateIds">

    </CheckBox>
    <CheckBox android:id="@+id/checkbox_airtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airtel"
        android:textAllCaps="true"
        app:fontFamily="sans-serif-condensed"
        android:layout_margin="10sp"
        android:onClick="onCheckboxClicked">

    </CheckBox>
    <CheckBox android:id="@+id/checkbox_telkom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telkom"
        app:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:layout_margin="10sp"
        android:onClick="onCheckboxClicked">

    </CheckBox>
    <CheckBox android:id="@+id/checkbox_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"
        app:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:layout_margin="10sp"
        android:onClick="onCheckboxClicked">

    </CheckBox>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12sp"
        android:layout_marginTop="12sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/question_2"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

       android:textAllCaps="true"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/what_do_you_like_about_the_internet_service_provider_s"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plain_text_input"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="true" tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_margin="16dp"
        android:text="@string/what_is_your_mobile_daily_budget"
        android:textAllCaps="true"
        <RadioButton android:id="@id/radio_50"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ksh_50_and_below"
            android:onClick="OnRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_50+"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ksh_50_and_above"
                android:onClick="OnRadioButtonClick"

        />

</LinearLayout>